terraform_provisinor_multiple_https/main.tf
provider "aws" {
  region = "us-east-2"
}

resource "aws_default_vpc" "default" {

}

resource "aws_security_group" "http_server_sg" {
  name = "http_server_sg"
  ##vpc_id = "vpc-0c867cff15e80e304"
  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "http_server_sg"
  }
}

resource "aws_instance" "http_servers" {
##ami                    = "ami-01103fb68b3569475"
  ami                    = data.aws_ami.aws_linux_2_latest.id
  key_name               = "terraform-key"
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.http_server_sg.id]
  // subnet_id              = "subnet-0d807dc28683ac161"
  //   subnet_id = data.aws_subnets.default_subnets.ids[0]
  // subnet_id = data.aws_subnets.default_subnets.ids[0]


  //for_each = toset(data.aws_subnets.default_subnets.ids)
  //subnet_id = each.value

  //tags = {
  //  name: "httpd_servers_${each.value}"
  // }


  connection {
    type        = "ssh"
    host        = self.public_ip
    user        = "ec2-user"
    private_key = file("./terraform-key.pem")
  }

  provisioner "remote-exec" {
    inline = [
      "sudo yum install httpd -y",
      "sudo service httpd start",
      "echo Welcome to in28minutes - Virtual Server is at ${self.public_dns} | sudo tee /var/www/html/index.html"
    ]
  }

}
